Fix mobile layout height overflows safe area

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -79,7 +79,11 @@ table {
 
 
     &--no-scroll {
-        height: calc(100vh - 55px);
+        position: fixed;
+        top: env(safe-area-inset-top);
+        bottom: env(safe-area-inset-bottom);
+        left: env(safe-area-inset-left);
+        right: env(safe-area-inset-right);
         display: flex;
         flex-direction: row;
         justify-content: center;
